	Added new cancel button/control to the save plugin. This will undo all changes and execute a optional callback.
	Added new remove_trailing_nbsp option that removes &nsbp; entities when paragraphs are filled with contents.
	Added new default_document option this enables you to specify a document to be loaded into TinyMCE by default.
	Cleaned up the source code by removing some obsolete code.
	Removed debug option, no longer needed since the devkit does it better.
	Removed old IE 5.0 code and reduced the overall code by using smarter prototype add methods.
	Removed encoding of apos/' characters since they only time they need to be escaped is when placed in apos based attribs.
	Fixed bug where local urls with params like ?param=x was converted into /?param=x if relative_urls was set to true. 
	Fixed bug where the clsids for wmp in media plugin was handled as RealMedia.
	Fixed bug where template plugin was inserting blank_page in FF.
	Fixed bug where it was impossible to remove the width/height of images in IE.
	Fixed bug where replace with empty contents in the replace dialog didn't work in FF.
	Fixed bug where the advanced themes insert image dialog produces a SSL warning if running over HTTPS in IE.
	Fixed bug where links directly to a anchor with a editor in IE failed due to the frameset fix.
	Fixed bug with numeric entity encoding not converting the first character in string.
	Fixed bug with new color picker not closing correctly some times.
	Fixed bug where FF was auto generating BR elements at the end of LI elements.
	Fixed bug where more colors link failed if the page had a base element in page.
	Fixed bug where link dialog produced error when importing CSS classes.
	Fixed bug where link dialog produced error when importing CSS classes.
	Fixed bug where fullpage plugin inserted extra > at the end of doctype.
	Fixed bug where fullpage plugin didn't remove internal mce_src/mce_href items correctly.
	Fixed bug where fullpage plugin height was incorrect on Linux.