@@ -87,5 +87,7 @@ web_colors : 'Web safe colors',
 named_colors_tab : 'Named',
 named_colors : 'Named colors',
 color : 'Color:',
-color_name : 'Name:'
+color_name : 'Name:',
+is_email : 'The URL you entered seems to be an email address, do you want to add the required mailto: prefix?',
+is_external : 'The URL you entered seems to external link, do you want to add the required http:// prefix?'
 });
